--- a/deploy/index.html
+++ b/deploy/index.html
@@ -10,7 +10,7 @@
 
         <script src="js/pienpanimopeli.min.js"></script>
         
-        <title>Pienpanimopeli!</title>
+        <title>Pienpanimopeli</title>
     </head>
     <body>
         <div>
@@ -18,4 +18,3 @@
         </div>
     </body>
 </html>
-    
