--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <script src="lib/jquery-2.1.3.min.js"></script>
         <script src="lib/phaser.min.js"></script>
 
+        <!-- MODULES -->
         <script src="src/core/brew.js"></script>
         <script src="src/core/boot.js"></script>
         <script src="src/core/preload.js"></script>
         <script src="src/core/main.js"></script>
+        <!-- /MODULES -->
         
         <title>Pienpanimopeli</title>
     </head>
