--- a/deploy/index.html
+++ b/deploy/index.html
@@ -7,6 +7,7 @@
         
         <script src="lib/jquery-2.1.3.min.js"></script>
         <script src="lib/phaser.min.js"></script>
+        <script src="lib/phaser-plugin-isometric.min.js"></script>
 
         <script src="js/pienpanimopeli.min.js"></script>
         
