Made a better build script and added it to the repo.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,5 +17,8 @@
         <div>
             <div id="game"></div>
         </div>
+        <div id="date">
+            Version date: 12.2.2015
+        </div>
     </body>
 </html>
