--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
         <div>
             <div id="game"></div>
         </div>
+        <div id="date">
+            Version date: <!-- VERSION -->
+        </div>
     </body>
 </html>
