--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fi">
     <head>
+	
         <!--<link href="style.css" rel="stylesheet" />-->
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
@@ -16,12 +17,13 @@
         <script src="src/core/boot.js"></script>
         <script src="src/core/preload.js"></script>
         <script src="src/core/main.js"></script>
+        <script src="src/core/messages.js"></script>
         <script src="src/util/gui.js"></script>
         <!-- /MODULES -->
         <style type="text/css">
         .progress {
             width: 100%;
-            height: 50px;
+            height: 25px;
         }
             .progress-wrap {
                 background: #f80;
@@ -41,7 +43,7 @@
     </head>
     <body>
         <!-- Change the below data attribute to play -->
-<div class="progress-wrap progress" data-progress-percent="25">
+<div class="progress-wrap progress" data-progress-percent="50">
   <div class="progress-bar progress"></div>
 </div>
         <div>
