--- a/index.html
+++ b/index.html
@@ -19,38 +19,15 @@
     <script src="src/core/preload.js"></script>
     <script src="src/core/main.js"></script>
     <script src="src/core/messages.js"></script>
-    <script src="src/util/gui.js"></script>
     <script src="src/core/beer.js"></script>
+    <script src="src/util/gui.js"></script>
+    <script src="src/util/budget.js"></script>
 
-    <!-- /MODULES -->
-    <style type="text/css">
-        .progress {
-            width: 100%;
-            height: 25px;
-        }
-        
-        .progress-wrap {
-            background: #f80;
-            margin: 20px 0;
-            overflow: hidden;
-            position: relative;
-        }
-        
-        .progress-bar {
-            background: #ddd;
-            left: 0;
-            position: absolute;
-            top: 0;
-        }
-    </style>
     <title>Pienpanimopeli</title>
 </head>
 
 <body>
-    <!-- Change the below data attribute to play -->
-    <div class="progress-wrap progress" data-progress-percent="50">
-        <div class="progress-bar progress"></div>
-    </div>
+    <div id="progressbar"></div>
     <div>
         <div style="width: 960px" id="game"></div>
     </div>
