--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="fi">
 
 <head>
-
-    <!--<link href="style.css" rel="stylesheet" />-->
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    
+    <link rel="stylesheet" type="text/css" href="brewgui.css" />
 
     <script src="lib/jquery-2.1.3.min.js"></script>
     <script src="lib/jquery-ui.min.js"></script>
     <script src="lib/phaser.min.js"></script>
     <script src="lib/phaser-plugin-isometric.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
 
 
     <!-- MODULES -->
@@ -22,7 +23,8 @@
     <script src="src/core/beer.js"></script>
     <script src="src/util/gui.js"></script>
     <script src="src/util/budget.js"></script>
-
+    <!-- /MODULES -->
+    
     <title>Pienpanimopeli</title>
 </head>
 
