--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="src/core/beer.js"></script>
     <script src="src/util/gui.js"></script>
     <script src="src/util/budget.js"></script>
+    <script src="src/gameobjects/storage.js"></script>
     <!-- /MODULES -->
     
     <title>Pienpanimopeli</title>
