--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-    
+
     <link rel="stylesheet" type="text/css" href="brewgui.css" />
 
     <script src="lib/jquery-2.1.3.min.js"></script>
     <script src="lib/jquery-ui.min.js"></script>
     <script src="lib/phaser.min.js"></script>
     <script src="lib/phaser-plugin-isometric.min.js"></script>
+    <script src="lib/easystar-0.1.13.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
-
 
     <!-- MODULES -->
     <script src="src/core/brew.js"></script>
@@ -24,8 +24,10 @@
     <script src="src/util/gui.js"></script>
     <script src="src/util/budget.js"></script>
     <script src="src/gameobjects/storage.js"></script>
+    <script src="src/gameobjects/floor.js"></script>
+
     <!-- /MODULES -->
-    
+
     <title>Pienpanimopeli</title>
 </head>
 
