Debuggaussysteemin korjausta: raaka-aineiden osto yhdistetty kattilaan + tilausten kontrollointi vaihdettu määristä hintoihin.

--- a/index.html
+++ b/index.html
@@ -34,14 +34,12 @@
 <body>
     <div id="progressbar"></div>
     <form id="form">
-        <br><b>(tilaukset 20 sek välein, 1 kori maksaa 100 ja 1 kattilallisesta saa 10 koria)</b>
-        <br> Koreja suuressa tilauksessa:
-        <input type="text" id="suuri" value="10">
+        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 10 koria, 1 tilauksessa 1-10 koria)</b>
+        
+        <br> Yhden korin hinta:
+        <input type="text" id="hinta" value="10">
 
-        <br> Koreja pienessä tilauksessa:
-        <input type="text" id="pieni" value="1">
-
-        <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa cook):
+        <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa kattilaa):
         <input type="text" id="aineet" value="1000">
 
         <br> Rahan kulutus per 10 sek (verot, palkat)
