Work on the Producers, and more fixing on the anchors.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="src/util/budget.js"></script>
     <script src="src/gameobjects/storage.js"></script>
     <script src="src/gameobjects/floor.js"></script>
-
+    <script src="src/gameobjects/producers.js"></script>
     <!-- /MODULES -->
 
     <title>Pienpanimopeli</title>
