A lot of work on the Production chain. Some modifications to sprites. Cleaning up in main.js. Fix to build script.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <script src="src/core/preload.js"></script>
     <script src="src/core/main.js"></script>
     <script src="src/core/messages.js"></script>
-    <script src="src/core/beer.js"></script>
     <script src="src/util/gui.js"></script>
     <script src="src/util/budget.js"></script>
+    <script src="src/gameobjects/beer.js"></script>
     <script src="src/gameobjects/storage.js"></script>
     <script src="src/gameobjects/floor.js"></script>
     <script src="src/gameobjects/producers.js"></script>
