viilailuja tilauksiin ja palkkauksiin

--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
         <input type="text" id="hinta" value="10">
 
         <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa ohra-kuvaketta):
-        <input type="text" id="aineet" value="100">
+        <input type="text" id="aineet" value="1000">
 
-        <br> Rahan kulutus per 20 sek (verot, palkat)
-        <input type="text" id="kulutus" value="10">
+        <br> Rahan kulutus per 20 sek (palkat)
+        <input type="text" id="kulutus" value="1000">
         <br>
         <input type="text">
         <br>Alkupääoma: 50 000
 
         <br>Voittopääoma: 100 000
-
     </form>
 
     <div>
