Better build script and new deployed version.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -27,18 +27,17 @@
         <br> Yhden korin hinta:
         <input type="text" id="hinta" value="10">
 
-        <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa kattilaa):
-        <input type="text" id="aineet" value="1000">
+        <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa ohra-kuvaketta):
+        <input type="text" id="aineet" value="100">
 
-        <br> Rahan kulutus per 10 sek (verot, palkat)
-        <input type="text" id="kulutus" value="1000">
+        <br> Rahan kulutus per 20 sek (verot, palkat)
+        <input type="text" id="kulutus" value="10">
         <br>
         <input type="text">
         <br>Alkupääoma: 50 000
 
         <br>Voittopääoma: 100 000
-        <br>Rahaa jäljellä:
-        <b><p id="rahaa"></p></b>
+
     </form>
 
     <div>
@@ -46,7 +45,7 @@
     </div>
     <div id="date">
         Version date:
-        23.3.2015
+        24.3.2015
     </div>
 </body>
 
