viikkokatsauksen muutokset tehty, aloitettu tilaussysteemin muutokset

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa ohra-kuvaketta):
         <input type="text" id="aineet" value="1000">
 
-        <br> Rahan kulutus per 20 sek (palkat)
+        <br> Rahan kulutus per 20 sek (verot)
         <input type="text" id="kulutus" value="1000">
         <br>
         <input type="text">
