Some work on the StorageManagers and product handling.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="src/gameobjects/storage.js"></script>
     <script src="src/gameobjects/floor.js"></script>
     <script src="src/gameobjects/producers.js"></script>
+    <script src="src/managers/storageManager.js"></script>
     <!-- /MODULES -->
 
     <title>Pienpanimopeli</title>
