--- a/deploy/index.html
+++ b/deploy/index.html
@@ -30,7 +30,7 @@
         <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa ohra-kuvaketta):
         <input type="text" id="aineet" value="1000">
 
-        <br> Rahan kulutus per 20 sek (palkat)
+        <br> Rahan kulutus per 20 sek (verot)
         <input type="text" id="kulutus" value="1000">
         <br>
         <input type="text">
@@ -44,7 +44,7 @@
     </div>
     <div id="date">
         Version date:
-        25.3.2015
+        8.4.2015
     </div>
 </body>
 
