facebookissa jakamisen aloitus + pientä fiksausta tilauksiin

--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
     <script src="src/managers/storageManager.js"></script>
     <!-- /MODULES -->
 
+    <script src="src/managers/facebook.js"></script>
+
     <title>Pienpanimopeli</title>
 </head>
 
 <body>
+    <div id="fb-root"></div>
     <div id="progressbar"></div>
     <form id="form">
         <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 10 koria, 1 tilauksessa 1-10 koria)</b>
-        
+
         <br> Yhden korin hinta:
         <input type="text" id="hinta" value="10">
 
