--- a/deploy/index.html
+++ b/deploy/index.html
@@ -16,14 +16,17 @@
 
     <script src="js/pienpanimopeli.min.js"></script>
 
+    <script src="src/managers/facebook.js"></script>
+
     <title>Pienpanimopeli</title>
 </head>
 
 <body>
+    <div id="fb-root"></div>
     <div id="progressbar"></div>
     <form id="form">
         <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 10 koria, 1 tilauksessa 1-10 koria)</b>
-        
+
         <br> Yhden korin hinta:
         <input type="text" id="hinta" value="10">
 
@@ -44,7 +47,7 @@
     </div>
     <div id="date">
         Version date:
-        8.4.2015
+        12.4.2015
     </div>
 </body>
 
