--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 <body>
     <div id="fb-root"></div>
-    <div id="progressbar"></div>
-    <form id="form">
-        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 10 koria, 1 tilauksessa 1-10 koria)</b>
+<!--    <div id="progressbar"></div>
+-->    <form id="form">
+        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 4 koria, 1 tilauksessa 1-10 koria)</b>
 
         <br> Yhden korin hinta:
         <input type="text" id="hinta" value="10">
