Some decor, reorganizing and other fixes. New build version.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -23,9 +23,9 @@
 
 <body>
     <div id="fb-root"></div>
-    <div id="progressbar"></div>
-    <form id="form">
-        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 10 koria, 1 tilauksessa 1-10 koria)</b>
+<!--    <div id="progressbar"></div>
+-->    <form id="form">
+        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 4 koria, 1 tilauksessa 1-10 koria)</b>
 
         <br> Yhden korin hinta:
         <input type="text" id="hinta" value="10">
@@ -47,7 +47,7 @@
     </div>
     <div id="date">
         Version date:
-        12.4.2015
+        15.4.2015
     </div>
 </body>
 
