Begun work on the tutorial! The basis of it done already.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="src/gameobjects/floor.js"></script>
     <script src="src/gameobjects/producers.js"></script>
     <script src="src/managers/storageManager.js"></script>
+    <script src="src/util/tutorial.js"></script>
     <!-- /MODULES -->
 
     <script src="src/managers/facebook.js"></script>
