--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div id="fb-root"></div>
 <!--    <div id="progressbar"></div>
--->    <form id="form">
+    <form id="form">
         <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 4 koria, 1 tilauksessa 1-10 koria)</b>
 
         <br> Yhden korin hinta:
@@ -55,7 +55,7 @@
         <br>Alkupääoma: 50 000
 
         <br>Voittopääoma: 100 000
-    </form>
+    </form>-->
 
     <div>
         <div style="width: 960px" id="game"></div>
