--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,10 +13,11 @@
     <script src="lib/phaser-plugin-isometric.min.js"></script>
     <script src="lib/easystar-0.1.13.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
-
-    <script src="js/pienpanimopeli.min.js"></script>
-
+    
+    <!--
     <script src="src/managers/facebook.js"></script>
+-->
+    <script src="js/pienpanimopeli.min.js"></script>
 
     <title>Pienpanimopeli</title>
 </head>
@@ -24,7 +25,7 @@
 <body>
     <div id="fb-root"></div>
 <!--    <div id="progressbar"></div>
--->    <form id="form">
+    <form id="form">
         <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 4 koria, 1 tilauksessa 1-10 koria)</b>
 
         <br> Yhden korin hinta:
@@ -40,14 +41,14 @@
         <br>Alkupääoma: 50 000
 
         <br>Voittopääoma: 100 000
-    </form>
+    </form>-->
 
     <div>
         <div style="width: 960px" id="game"></div>
     </div>
     <div id="date">
         Version date:
-        16.4.2015
+        20.4.2015
     </div>
 </body>
 
