The main menu splash screen.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="src/core/brew.js"></script>
     <script src="src/core/boot.js"></script>
     <script src="src/core/preload.js"></script>
+    <script src="src/core/menu.js"></script>
     <script src="src/core/main.js"></script>
     <script src="src/core/messages.js"></script>
     <script src="src/util/gui.js"></script>
@@ -58,11 +59,11 @@
     </form>-->
 
     <div>
-        <div style="width: 960px" id="game"></div>
-    </div>
-    <div id="date">
-        Version date:
-        <!-- VERSION -->
+        <div style="width: 960px" id="game">
+            <div id="version">
+                Versio: <!-- VERSION -->
+            </div>
+        </div>
     </div>
 </body>
 
