New delpoy version.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -44,11 +44,11 @@
     </form>-->
 
     <div>
-        <div style="width: 960px" id="game"></div>
-    </div>
-    <div id="date">
-        Version date:
-        20.4.2015
+        <div style="width: 960px" id="game">
+            <div id="version">
+                Versio: 28.4.2015
+            </div>
+        </div>
     </div>
 </body>
 
