A few fixes to sounds and a fix to CSS.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
     </form>-->
 
     <div>
-        <div style="width: 960px" id="game">
-            <div id="version">
-                Versio: <!-- VERSION -->
-            </div>
+        <div style="width: 960px" id="pienpanimopeli">
         </div>
     </div>
 </body>
