Removed easystar dependency

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -44,10 +44,7 @@
     </form>-->
 
     <div>
-        <div style="width: 960px" id="game">
-            <div id="version">
-                Versio: 28.4.2015
-            </div>
+        <div style="width: 960px" id="pienpanimopeli">
         </div>
     </div>
 </body>
