Some final changes for the published version.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <script src="lib/phaser-plugin-isometric.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
     
-    <!--
-    <script src="src/managers/facebook.js"></script>
--->
     <!-- MODULES -->
     <script src="src/core/brew.js"></script>
     <script src="src/core/boot.js"></script>
@@ -37,30 +34,8 @@
 </head>
 
 <body>
-    <div id="fb-root"></div>
-<!--    <div id="progressbar"></div>
-    <form id="form">
-        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 4 koria, 1 tilauksessa 1-10 koria)</b>
-
-        <br> Yhden korin hinta:
-        <input type="text" id="hinta" value="10">
-
-        <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa ohra-kuvaketta):
-        <input type="text" id="aineet" value="1000">
-
-        <br> Rahan kulutus per 20 sek (verot)
-        <input type="text" id="kulutus" value="1000">
-        <br>
-        <input type="text">
-        <br>Alkupääoma: 50 000
-
-        <br>Voittopääoma: 100 000
-    </form>-->
-
-    <div>
-        <div style="width: 960px" id="pienpanimopeli">
+        <div id="pienpanimopeli">
         </div>
-    </div>
 </body>
 
 </html>
