--- a/deploy/index.html
+++ b/deploy/index.html
@@ -11,42 +11,16 @@
     <script src="lib/jquery-ui.min.js"></script>
     <script src="lib/phaser.min.js"></script>
     <script src="lib/phaser-plugin-isometric.min.js"></script>
-    <script src="lib/easystar-0.1.13.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
     
-    <!--
-    <script src="src/managers/facebook.js"></script>
--->
     <script src="js/pienpanimopeli.min.js"></script>
 
     <title>Pienpanimopeli</title>
 </head>
 
 <body>
-    <div id="fb-root"></div>
-<!--    <div id="progressbar"></div>
-    <form id="form">
-        <br><b>(tilaukset 20 sek välein, 1 kattilallisesta saa 4 koria, 1 tilauksessa 1-10 koria)</b>
-
-        <br> Yhden korin hinta:
-        <input type="text" id="hinta" value="10">
-
-        <br> Raaka-aineen hinta yhteen kattilalliseen (klikkaa ohra-kuvaketta):
-        <input type="text" id="aineet" value="1000">
-
-        <br> Rahan kulutus per 20 sek (verot)
-        <input type="text" id="kulutus" value="1000">
-        <br>
-        <input type="text">
-        <br>Alkupääoma: 50 000
-
-        <br>Voittopääoma: 100 000
-    </form>-->
-
-    <div>
-        <div style="width: 960px" id="pienpanimopeli">
+        <div id="pienpanimopeli">
         </div>
-    </div>
 </body>
 
 </html>
